fix:  swagger of all feature with correct
