# user/handle/http/user_handle.go
@@ -4,7 +4,6 @@ import (
 	"github.com/bimaagung/cafe-reservation/domain"
 	"github.com/bimaagung/cafe-reservation/utils/response"
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 )
 
 func NewUserController(userUseCae domain.UserUseCase) User {
@@ -21,10 +20,17 @@ func (controller *User) Route(app *gin.Engine) {
 	api.POST("/auth/register", controller.Register)
 }
 
+// Register godoc
+// @Schemes
+// @Description register a new user
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param request body domain.UserReq true "the input account user"
+// @Success 200 {object} response.SuccessRes{data=domain.UserRes}
+// @Router /api/auth/register [post]
 func (controller *User) Register(c *gin.Context) {
 	var request domain.UserReq
-
-	request.Id = uuid.New().String()
 	
 	if err := c.BindJSON(&request); err != nil {
 		c.JSON(400, response.ErrorRes{
